2004-02-17  Radek Doulik  <rodo@ximian.com>

	* glib/Value.cs: use g_value_set_pointer for
	GType.Pointer/IWrapper objects

	* glib/TypeConverter.cs: return GType.Pointer for Opaque objects
	which do not have GType property

2004-02-17  John Luke  <jluke@cfl.rr.com>

	* gdk/Gdk.metadata: set Gdk.Window.Cursor null_ok
	* gdk/gdk-api.xml: regen

2004-02-17   Jorn Baayen  <jorn@nl.linux.org>

	* gtk/SelectionData.custom : fix get_data_pointer glue method name.

2004-02-16  Mike Kestner  <mkestner@ximian.com>

	* glib/TypeConverter.cs : check for GType prop on all types,
	not just value types, before we fall back to managed values.
	* glib/Value.cs : use handle to set_boxed for IWrappers.

2004-02-16  Mike Kestner  <mkestner@ximian.com>

	* gdk/EventKey.cs : add a Key prop to return casted KeyVals.

2004-02-16  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide EventKey
	* gdk/EventKey.cs : glue-based manual implementation.
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mapping for EventKey.
	* glue/event.cs : expose key struct fields.

2004-02-16  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide EventAny
	* gdk/Event.cs : make this a full EventAny implementation.
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : map EventAny to Gdk.Event.
	* glue/event.cs : expose window and send_event fields.

2004-02-14  Todd Berman  <tberman@sevenl.net>

	* gtk/Gtk.metadata : hide Widget.SetState
	* gtk/Widget.custom : add State get; set; property
	* glue/widget.c : add glue for get_State ();
	* gtk/gtk-api.xml : regen

2004-02-12  Mike Kestner  <mkestner@ximian.com>

	* sample/GladeViewer.cs : fix a broken api usage.

2004-02-12  Mike Kestner  <mkestner@ximian.com>

	* gnome/Gnome.metadata : hide the GList API
	* gnome/*.custom : manually wrap GList api using typed arrays
	* gnome/gnome-api.xml : regen.

2004-02-12  Mike Kestner  <mkestner@ximian.com>

	* glade/Glade.metadata : hide a GList method.
	* glade/Makefile.in : run gapi-fixup