@@ -64,6 +64,7 @@
   <attr path="/api/namespace/object[@cname='GdkWindow']/method[@name='SetCursor']/parameters/parameter[@name='cursor']" name="null_ok">1</attr>
   <attr path="//object[@cname='GdkWindow']/method[@name='SetIconList']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkEventAny']" name="hidden">1</attr>
+  <attr path="//struct[@cname='GdkEventButton']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkEventKey']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkPixmapObject']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkTimeCoord']/field[@cname='axes']" name="array_len">128</attr>
